--- a/public_html/styles/login.css
+++ b/public_html/styles/login.css
@@ -119,7 +119,7 @@
 }
 
 .input-cont {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .input-icon-cont {
@@ -200,6 +200,7 @@ label.push-up {
 }
 
 .remember-input-cont {
+    display: none;
     margin-top: 40px;
     margin-bottom: 30px;
 }
@@ -263,6 +264,7 @@ input[type=submit] {
     padding: 11px 0;
     width: 100%;
     border-radius: 4px;
+    margin-top: 50px;
     font-size: 1.1em;
     color: white;
     cursor: default;
